--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         System.config({
             defaultJSExtensions: true
         })
-        System.import('/src/app');
+        System.import('/dist/app.js');
     </script>
     </body>
 </html>
